# Mikes-Pi-Bakery

./: .gitignore  About  curvedBall.py
3D_Viewing/: View3D.py  View3Dsbs.py  View3Dwiggle.py  readMe
Amaze/: About  amaze.py  photo_test.py
Arduino_Scope/: readMe
CurveBall/: About
Cutout_Theater/: readMe.txt
DJ_Art/: readMe
Danse_Macabre/: readMe.txt
Drum_Like_Me/: readMe
Fidget Spinner/: readMe
Fractal_Music/: Classic_Fractals.py  Extra_Code_for_Note_Duration_Functions.py  Graphic_Fractal.py  Multi_Channel.py  New_Functions_for_Simple.py  Note_Duration.py  ReadMe.txt  Simple.py  Some Clasic Fractals.txt
Get_a_Grip/: readMe
Glitch_Storm/: Converting C functions to Python.txt  readMe  useful links.txt
GraviTrax Part 1/: readMe
GraviTrax Part 2/: readMe
GraviTrax Part 3/: readMe
Head_n_Ron/: PathForScratchSounds  ReadMe.txt  head_n_ron.py
Hex-A-Pad Part 1/: Important note.txt  installing libiary.txt  readMe
Hex-A-Pad Part 2/: readMe  rtmidi install.txt
Hex-Keys Part 1/: Important note please read.txt  readMe
Hex-Keys Part 2/: How to use these files.txt  Important note please read.txt  readMe
Hexome/: readMe.txt
Horse_Derby/: ReadMe.txt
Hunt the Snark/: mains.py  mains8.py  readMe
In_A_Spin/: Parts_List.txt  Video Links.txt  readMe
Infinity_Mirror/: distance.py  mirror1.py  readMe
Infinity_Mirror_Part2/: InfinityTime.py  InfinityTime2.py  hard_time.py  (+2 more)
Voice_Changer Part2/Software/pico-voice/: CMakeLists.txt  pico-voice.c  ss_oled.c
Voice_Changer Part2/Software/pico-voice/include/: BitBang_I2C.h  pico-voice.h  ss_oled.h
(+436 files in other folders)
